--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
           mkdir -p live-build/config/package-lists
 
           # Move custom kernel .deb files to live-build package directory
-          mv ../*.deb live-build/config/packages.chroot/
+          mv ./*.deb live-build/config/packages.chroot/
 
           # Include additional packages (add more packages as needed)
           echo "efivar" > live-build/config/package-lists/my.list.chroot
