--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,15 +62,15 @@ jobs:
 
           # Compile the kernel and build .deb packages
           make -j$(nproc) bindeb-pkg
-          mkdir -p live-build/config/packages.chroot
-          mv ../*.deb live-build/config/packages.chroot
+          cp ../*.deb .
+
           
       # Store the generated .deb files as artifacts
       - name: Upload Kernel .deb Files
         uses: actions/upload-artifact@v4
         with:
           name: kernel-debs
-          path: live-build/config/packages.chroot/*.deb
+          path: ./*.deb
           if-no-files-found: warn
           compression-level: 6
           overwrite: false
@@ -80,7 +80,8 @@ jobs:
       - name: Configure live-build for Debian
         run: |
           # Create directories for live-build configuration
-          
+          mkdir -p live-build/config/packages.chroot
+          mv ../*.deb live-build/config/packages.chroot      
           mkdir -p live-build/config/package-lists
 
           # Move custom kernel .deb files to live-build package directory
@@ -90,7 +91,7 @@ jobs:
 
           # Configure live-build
           cd live-build
-          lb config
+          lb config --distribution bookworm
 
       # Build the live image
       - name: Build Debian Live ISO
