--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Install live-build
-      run: sudo apt-get update && sudo apt-get install -y live-build
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget
+        wget http://ftp.debian.org/debian/pool/main/l/live-build/live-build_20230601_all.deb
+        sudo dpkg -i live-build_20230601_all.deb
 
     - name: Configure live-build
       run: lb config -d bullseye --debian-installer none --archive-areas "main contrib non-free" --debootstrap-options "--variant=minbase"
