--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,13 @@ jobs:
         sudo dpkg -i live-build_20240810_all.deb
 
     - name: Configure live-build
-      run: lb config -d bullseye --debian-installer none --archive-areas "main contrib non-free" --debootstrap-options "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg --variant=minbase"
+      run: lb config -d mint --debian-installer none --archive-areas "main contrib non-free" --debootstrap-options "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg --variant=minbase"
 
     - name: Build live image
       run: sudo lb build
+
+    - name: Upload ISO artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: live-image
+        path: ./live-image-amd64.hybrid.iso
