--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,14 @@ jobs:
         sudo dpkg -i live-build_20240810_all.deb
 
     - name: Configure live-build
-      run: lb config -d mint --debian-installer none --archive-areas "main contrib non-free" --debootstrap-options "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg --variant=minbase"
-
+      run: |
+        lb config -d focal --debian-installer none --archive-areas "main contrib non-free" --debootstrap-options "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg --variant=minbase"
+        echo "deb http://packages.linuxmint.com una main upstream import backport" | sudo tee -a config/package-lists/mint.list.chroot
+        echo "deb http://archive.ubuntu.com/ubuntu focal main restricted universe multiverse" | sudo tee -a config/package-lists/mint.list.chroot
+        echo "deb http://archive.ubuntu.com/ubuntu focal-updates main restricted universe multiverse" | sudo tee -a config/package-lists/mint.list.chroot
+        echo "deb http://archive.ubuntu.com/ubuntu focal-backports main restricted universe multiverse" | sudo tee -a config/package-lists/mint.list.chroot
+        echo "deb http://security.ubuntu.com/ubuntu focal-security main restricted universe multiverse" | sudo tee -a config/package-lists/mint.list.chroot
+        
     - name: Build live image
       run: sudo lb build
 
